2008-09-25  Jakub Jelinek  <jakub@redhat.com>

	PR c/37645
	* c-common.c (handle_weakref_attribute): Ignore the attribute unless
	the decl is a VAR_DECL or FUNCTION_DECL.

2008-09-25  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/37535
	* ira-lives.c (mark_reg_live, mark_reg_dead): New functions.
	(mark_ref_live, mark_ref_dead): Use them.
	(def_conflicts_with_inputs_p): Remove.
	(mark_early_clobbers): New function.
	(process_bb_node_lives): Call preprocess_constraints and
	mark_early_clobbers.

	* doc/rtl.texi (clobber): Change how RA deals with clobbers.

2008-09-25  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/37448
	* ira-int.h (IRA_ALLOCNO_TEMP): Rename to ALLOCNO_TEMP.
	(ira_compress_allocno_live_ranges): New prototype.

	* ira-color.c: Rename IRA_ALLOCNO_TEMP to ALLOCNO_TEMP.
	(coalesced_allocnos_living_at_program_points): New.
	(coalesced_allocnos_live_at_points_p,
	set_coalesced_allocnos_live_points): New functions.
	(coalesce_spill_slots): Rewrite.
	
	* ira-lives.c (remove_some_program_points_and_update_live_ranges,
	ira_compress_allocno_live_ranges): New functions.

	* ira-build.c (ira_flattening): Call
	ira_compress_allocno_live_ranges.
	(ira_build): Ditto.

2008-09-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md: Check cmp/branch fuse for cmp peephole
	optimization.

2008-09-25  Richard Sandiford  <rdsandiford@googlemail.com>

	* combine.c (make_compound_operation): Handle the 'E' format.
	(count_rtxs): Likewise.
	(update_table_tick): Likewise.
	(get_last_value_validate): Likewise.

2008-09-25  Eric Botcazou  <ebotcazou@adacore.com>

	* dbxout.c (dbxout_parms): Fetch the inner REG inside a PARALLEL.

2008-09-25 Sergei Dyshel <sergeid@il.ibm.com>

	* matrix-reorg.c (transform_allocation_sites): Initializers 
	added to avoid the warning.

2008-09-25  Martin Jambor  <mjambor@suse.cz>

	* cgraph.c (free_nodes): New variable.
	(NEXT_FREE_NODE): New macro.
	(cgraph_create_node): Reuse nodes from the free list.  Do not