@@ -1,3 +1,9 @@
+2008-09-26  Dorit Nuzman  <dorit@il.ibm.com>
+	
+	PR tree-optimization/37574
+	* gcc.dg/vect/ggc-pr37574.c: New test.
+	* gcc.dg/vect/vect.exp: Compile some tests with ggc flags.
+
 2008-09-25  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/37645
